# finance_goblin

./: .cursorignore  .dockerignore  .env.example  .gitignore  Projectplan.md  README.md  docker-compose.external.yml  docker-compose.override.yml  docker-compose.yml  installer.py
backend/: Cargo.toml  Dockerfile
backend/config/: default.toml
backend/migrations/: 001_initial.sql  002_forecast_hypertables.sql  003_subscriptions.sql  004_plans.sql  005_alerts_wealth.sql  006_ai_audit.sql  007_exchanges_portfolio.sql  008_ai_audit_provider.sql  009_forecast_ml.sql  010_subscription_alert_fingerprint.sql  011_forecast_bucket_provenance.sql  012_subscription_patterns_payee_status.sql  013_goal_balance.sql  014_us0020_display_category_tags.sql  015_bug0017_forecast_fk_cascade.sql  016_bug0020_subscription_list_quality.sql  017_bug0023_exposure_eur.sql  018_bug0017_ai_audit_forecast.sql
backend/src/: lib.rs  main.rs
backend/tests/: ai_assistant_integration.rs  ai_frozen_modules.rs  ai_local_provider_isolation.rs  analytics_proxy_integration.rs  bug0007_ai_discovery.rs  bug0008_subscription_alerts.rs  bug0020_subscription_list_quality.rs  bug0021_wealth_account_role.rs  bug0023_crypto_wealth_eur.rs  bug0025_sync_transaction_window.rs  database_bootstrap_integration.rs  exchange_signing.rs  exchanges_portfolio_integration.rs  firefly_integration.rs  firefly_readonly.rs  firefly_readonly_test.rs  forecast_integration.rs  forecast_ml_integration.rs  grafana_provisioning_bug0009.rs  meta_test.rs  plans_integration.rs  product_routes_regression.rs  spa_fallback_integration.rs  (+4 more)
(+1393 files in other folders)
