[package]
name = "flow-finance-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "migrate", "uuid"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
jsonwebtoken = "9"
tokio-cron-scheduler = "0.13"
url = "2"
sha2 = "0.10"
regex = "1"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
async-stream = "0.3"
async-trait = "0.1"
hmac = "0.12"
hex = "0.4"
tokio-tungstenite = "0.24"
futures-util = "0.3"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"

[profile.release]
lto = true
codegen-units = 1
